# RISE

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  svelte.config.js
.github/ISSUE_TEMPLATE/: project-feature-issue.md
.github/workflows/: dev-to-release.yml  main.yml  main2.yml  publish-release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: actions.rs  commands.rs  file_watcher.rs  highlight.rs  lib.rs  main.rs  project.rs  terminal.rs  theme.rs
src-tauri/tests/: README.md  fs_compatibility_tests.rs  platform_specific_tests.rs  ui_compatibility_tests.rs
src/lib/stores/: fileStore.ts
src/lib/utils/: fileLoader.ts  types.ts
src/routes/: +layout.ts  +page.svelte  main.scss
src/routes/editor/: +page.svelte  FileMenu.svelte  Terminal.svelte  editor.scss  file-menu.scss
src/routes/editor/components/: Editor.svelte  FileMenu.svelte  FindBar.svelte  Menu.svelte  ProjectSearchModal.svelte  Sidebar.svelte  Terminal.svelte
src/routes/editor/style/: editor.scss  file-menu.scss  main.scss  menu.scss  sidebar.scss  terminal.scss
