[package]
name = "rise"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "shell-all", "dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0.219" }
serde_json = "1"
hostname = "0.3.0"

[dev-dependencies]
rand = "0.8.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
