[package]
name = "rise"
version = "0.0.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "rise_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5.6", features = [] }

[dependencies]
tauri = { version = "1.8.3", features = [ "shell-all", "dialog-all", "fs-all", "window-all"] }
serde = { version = "1.0.219" }
serde_json = "1"
hostname = "0.3.0"
lazy_static = "1.4"
# Tree-sitter for backend syntax highlighting
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23.6"
tree-sitter-c = "0.24.1"
tree-sitter-java = "0.23.5"
tree-sitter-typescript = "0.23.2"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-sequel = "0.3.8"

[dev-dependencies]
rand = "0.8.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
