[package]
name = "rise"
version = "0.0.4"
description = "RISE IDE build for success"
authors = ["you"]
edition = "2021"

[lib]
name = "rise_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
 tauri = { version = "2", features = [] }
 tauri-plugin-dialog = "2"
 tauri-plugin-fs = "2"
 serde = { version = "1.0.219" }
 serde_json = "1"
 hostname = "0.3.0"
 lazy_static = "1.4"
 # Tree-sitter for backend syntax highlighting
 tree-sitter = "0.24"
 tree-sitter-rust = "0.23"
 tree-sitter-python = "0.23.6"
 tree-sitter-c = "0.24.1"
 tree-sitter-java = "0.23.5"
 tree-sitter-typescript = "0.23.2"
 tree-sitter-c-sharp = "0.23.1"
 tree-sitter-sequel = "0.3.8"
 tree-sitter-javascript = "0.25.0"
 streaming-iterator = "0.1"
 anyhow = "1.0.98"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[dev-dependencies]
rand = "0.8.5"

[features]
custom-protocol = ["tauri/custom-protocol"]
